fixed overflow of projects page on right. everything done except nice looking mobile projects page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,10 @@ body {
     margin: -20px 0;
   }
 
+  #project-container {
+    padding: 85px 0 0 0;
+  }
+
   .frame {
     min-height: 0;
     height: 850px;
